tests/ui/coverage-attr/word-only.stderr
error[E0539]: malformed `coverage` attribute input
  --> $DIR/word-only.rs:12:1
   |
LL | #[coverage]
   | ^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL | #[coverage(off)]
   |           +++++
LL | #[coverage(on)]
   |           ++++

error[E0539]: malformed `coverage` attribute input
  --> $DIR/word-only.rs:17:5
   |
LL |     #![coverage]
   |     ^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #![coverage]
LL +     #[coverage(off)]
   |
LL -     #![coverage]
LL +     #[coverage(on)]
   |

error[E0539]: malformed `coverage` attribute input
  --> $DIR/word-only.rs:21:1
   |
LL | #[coverage]
   | ^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL | #[coverage(off)]
   |           +++++
LL | #[coverage(on)]
   |           ++++

error[E0539]: malformed `coverage` attribute input
  --> $DIR/word-only.rs:25:1
   |
LL | #[coverage]
   | ^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL | #[coverage(off)]
   |           +++++
LL | #[coverage(on)]
   |           ++++

error[E0539]: malformed `coverage` attribute input
  --> $DIR/word-only.rs:28:5
   |
LL |     #[coverage]
   |     ^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL |     #[coverage(off)]
   |               +++++
LL |     #[coverage(on)]
   |               ++++

error[E0539]: malformed `coverage` attribute input
  --> $DIR/word-only.rs:33:1
   |
LL | #[coverage]
   | ^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL | #[coverage(off)]
   |           +++++
LL | #[coverage(on)]
   |           ++++

error[E0539]: malformed `coverage` attribute input
  --> $DIR/word-only.rs:36:5
   |
LL |     #[coverage]
   |     ^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL |     #[coverage(off)]
   |               +++++
LL |     #[coverage(on)]
   |               ++++

error[E0539]: malformed `coverage` attribute input
  --> $DIR/word-only.rs:40:5
   |
LL |     #[coverage]
   |     ^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL |     #[coverage(off)]
   |               +++++
LL |     #[coverage(on)]
   |               ++++

error[E0539]: malformed `coverage` attribute input
  --> $DIR/word-only.rs:45:1
   |
LL | #[coverage]
   | ^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL | #[coverage(off)]
   |           +++++
LL | #[coverage(on)]
   |           ++++

error[E0539]: malformed `coverage` attribute input
  --> $DIR/word-only.rs:48:5
   |
LL |     #[coverage]
   |     ^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL |     #[coverage(off)]
   |               +++++
LL |     #[coverage(on)]
   |               ++++

error[E0539]: malformed `coverage` attribute input
  --> $DIR/word-only.rs:52:5
   |
LL |     #[coverage]
   |     ^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL |     #[coverage(off)]
   |               +++++
LL |     #[coverage(on)]
   |               ++++

error[E0539]: malformed `coverage` attribute input
  --> $DIR/word-only.rs:57:1
   |
LL | #[coverage]
   | ^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL | #[coverage(off)]
   |           +++++
LL | #[coverage(on)]
   |           ++++

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0539`.
